--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>IBM Compose for Elasticsearch for Bluemix hello world app</title>
+    <title>IBM Compose for Elasticsearch for IBM Cloud hello world app</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
